syntax = "proto3";
import "entities.proto";

option java_multiple_files = true;
option java_package = "com.example";
option java_outer_classname = "DemoClient";
option objc_class_prefix = "HLW";

package com.example;

service DemoClientService {
  rpc saveUser (SaveUserRequest) returns (UserResponse) {}
  rpc findAdressByCepClient (FindAdressRequest) returns (AdressResponse) {}
}
