syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example";
option java_outer_classname = "DemoServer";
option objc_class_prefix = "HLW";

package com.example;

service DemoServerService {
  rpc saveUser (SaveUserRequest) returns (UserResponse) {}
  rpc saveUserStream (stream SaveUserRequest) returns (stream UserResponse) {}
  rpc findAdressByCep (FindAdressRequest) returns (AdressResponse) {}
}

message SaveUserRequest {
  string name = 1;
  string lastName = 2;
  string document = 3;

}

message UserResponse {
  int32 id = 1;
  string name = 2;
  string lastName = 3;
}

message FindAdressRequest {
  string cep = 1;
}

message AdressResponse {
  string cep = 1;
  string logradouro = 2;
  string complemento = 3;
  string bairro = 4;
  string localidade = 5;
  string uf = 6;
  string ibge = 7;
  string gia = 8;
  string ddd = 9;
  string siafi = 10;
}